base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: habesha-hub
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: habesha-hub
